--- a/app/src/main/res/layout/fragment_item_infos.xml
+++ b/app/src/main/res/layout/fragment_item_infos.xml
@@ -13,8 +13,8 @@
         android:gravity="center"
         android:layout_gravity="center">
 
-        <ImageView
-            android:id="@+id/image"
+        <TextView
+            android:id="@+id/textTest"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_margin="@dimen/text_margin"
@@ -32,12 +32,12 @@
         android:layout_gravity="center">
 
         <TextView
-        android:id="@+id/content"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:text="TEST2"/>
+            android:id="@+id/content"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_margin="@dimen/text_margin"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:text="TEST2"/>
     </LinearLayout>
 
     <LinearLayout
