--- a/app/src/main/res/layout/fragment_item_infos.xml
+++ b/app/src/main/res/layout/fragment_item_infos.xml
@@ -6,50 +6,15 @@
     android:gravity="center"
     android:layout_gravity="center">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_gravity="center">
-
-        <TextView
-            android:id="@+id/textTest"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_margin="@dimen/text_margin"
-            android:gravity="center"
-            android:layout_gravity="center"/>
-
-
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:id="@+id/linearlayout"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/content"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"
-            android:text="TEST2"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center">
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:text="----------------------------------------------------------------------------------"
-            android:textSize="12dp"/>
     </LinearLayout>
 
 </LinearLayout>
