--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -10,18 +10,28 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="horizontal"
         android:gravity="center"
         android:layout_gravity="center">
 
-        <ImageView
-            android:id="@+id/image"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:layout_margin="@dimen/text_margin"
+            android:layout_marginHorizontal="100dp"
+            android:text=""/>
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="500dp"
+            android:layout_height="fill_parent"
+            android:layout_marginVertical="16dp"
             android:gravity="center"
             android:layout_gravity="center"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_marginHorizontal="100dp"
+            android:text=""/>
 
 
     </LinearLayout>
@@ -41,16 +51,5 @@
         android:text="TEST2"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center">
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:text="----------------------------------------------------------------------------------"
-            android:textSize="12dp"/>
-    </LinearLayout>
 
 </LinearLayout>
