--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -47,8 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:text="TEST2"/>
+        android:textAppearance="?attr/textAppearanceListItem" />
     </LinearLayout>
 
 
